# Catalogsmith--AI-Product-Catalog-Agent

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  run.py
.github/workflows/: ci.yml
config/: claude_desktop_config.example.json  personas.yaml  voice_rules.yaml
data/: ablation_report.json
data/chroma_local/: chroma.sqlite3
eval/: EVAL_SPEC.md  ablation.py  fixtures.py  rubric.py
eval/golden/001_clean_earbuds/: expected.json  input.txt
eval/golden/002_clean_kettle/: expected.json  input.txt
eval/golden/003_clean_serum/: expected.json  input.txt
eval/golden/004_messy_commas/: expected.json  input.txt
eval/golden/005_inr_prefix/: expected.json  input.txt
eval/golden/006_rs_suffix/: expected.json  input.txt
eval/golden/007_features_label/: expected.json  input.txt
eval/golden/010_photo/: input.txt  (+1 more)
scripts/: check_memory_persistence.py  cost_summary.py  download_product_photos.py  generate_product_images.py  probe-azure.py  probe-responses.py  repair-venv.ps1  run.ps1  run_ablation.py  seed.py
src/agent/: __init__.py  __main__.py  bootstrap.py  categories.py  config.py  main.py  seed.py
tests/: conftest.py  test_ablation.py  test_adapter.py  test_agent_ui.py  test_azure_llm.py  test_bootstrap.py  test_catalog_images.py  test_db_migrate.py  test_facts_gate.py  test_graph.py  test_grounding.py  test_guardrails_pipeline.py  test_injection_traps.py  test_loop2.py  test_mcp.py  test_memory.py  test_metrics.py  test_parser_golden.py  test_pipeline.py  test_rubric.py  test_storefront.py  test_uploads.py
(+146 files in other folders)
