[project]
name = "catalogsmith"
version = "0.8.0"
description = "AI catalog agent — parse, draft, approve, publish"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.12",
    "pyyaml>=6.0.2",
    "openai>=1.55.0",
    "langgraph>=0.2.60",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "chromadb>=0.5.23",
    "mcp>=1.0.0",
]

[project.scripts]
catalogsmith-add = "agent.cli.add:main"
catalogsmith-mcp = "agent.mcp.server:main"
catalogsmith-panel = "agent.cli.panel:main"
catalogsmith-serve = "agent.cli.serve:main"
catalogsmith-ablation = "agent.cli.ablation:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent"]

[tool.hatch.build.targets.wheel.force-include]
"src/agent/web" = "agent/web"
"config" = "config"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
